added the three buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 <body>
     <h1>ROCK-PAPAR-SCISSORS</h1>
+    <div class="computer">
+        <button>computer</button>
+    </div>
+
+    <div class="player">
+        <button>player</button>
+    </div>
+
+    <div class="playround">
+        <button>playround</button>
+    </div>
+    
 
 </body>
 </html>
