add the files above

--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>ROCK-PAPAR-SCISSORS</h1>
-    <div class="computer">
-        <button>computer</button>
+    <div class="container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
     </div>
 
-    <div class="player">
-        <button>player</button>
+    <div class="results">
     </div>
 
-    <div class="playround">
-        <button>playround</button>
-    </div>
+    <div class="declare"></div>
+
+    <div>Computer <span class="computerscore"></span> : <span  class="playerscore"></span> Player</div>
     
-
+    <script src="script.js"></script>
 </body>
 </html>
