--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="declare"></div>
 
-    <div>Computer <span class="computerscore"></span> : <span  class="playerscore"></span> Player</div>
+    <div class="container">Computer <span class="computerscore"></span> : <span  class="playerscore"></span> Player</div>
     
     <script src="script.js"></script>
 </body>
